# tauri-practise

./: LICENSE  UPDATELOG.md  package-lock.json  package.json  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: build.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: background.rs  command.rs  macros.rs  main.rs  models.rs  utils.rs
src/components/: ContextMenu.vue  EditableCell.vue  ExampleJson.vue  Greet.vue  Nav.vue  Screen.vue  Setting.vue  ShowJson.vue  ShowMain.vue
src/components/JsonViewer/: JsonViewer.vue  json-box.vue
src/router/: index.ts
src/types/: image.ts  settings.ts  summary.ts
src/utils/: config.ts  utils.ts
src/views/: HomeView.vue  SelectView.vue
