[package]
name = "video-inspector"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = [ "protocol-asset", "dialog-all", "shell-open", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.2"
urlencoding = "2.1.2"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10.0"
chrono = "0.4.26"
serde_json_path = "0.6.0"
dirs = "5.0"
ffmpeg-sidecar = "0.4.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
